2017-05-23  Natalia Portillo  <claunia@claunia.com>

	* Kreon.cs: Typo correction.

2017-05-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	* Kreon.cs: Added Kreon commands.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Command.cs:
	* Enums.cs:
	* Extern.cs:
	* Enums.cs:
	* Command.cs:
	* Enums.cs:
	* Structs.cs:
	* Extern.cs:
	* Extern.cs:
	* Command.cs:
	* Commands.cs:
	* Structs.cs:
	* Command.cs:
	* Structs.cs:
	* Variables.cs:
	* Destructor.cs:
	* Constructor.cs:
	* Cfa.cs:
	* HP.cs:
	* MMC.cs:
	* MCPT.cs:
	* SMC.cs:
	* SBC.cs:
	* SPC.cs:
	* AssemblyInfo.cs:
	* NEC.cs:
	* MMC.cs:
	* SSC.cs:
	* Atapi.cs:
	* Ata48.cs:
	* Smart.cs:
	* Ata28.cs:
	* AtaCHS.cs:
	* SyQuest.cs:
	* Plasmon.cs:
	* Pioneer.cs:
	* Fujitsu.cs:
	* Adaptec.cs:
	* Plextor.cs:
	* Certance.cs:
	* HL-DT-ST.cs:
	* ArchiveCorp.cs:
	* SecureDigital.cs: Updated copyright string.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Devices.csproj: Upped version to 3.3.99.0. Do
	  not use version from solution on library projects.

2016-10-22  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Command.cs:
	* Enums.cs:
	* Extern.cs:
	* Command.cs:
	* Structs.cs:
	* Commands.cs:
	* Constructor.cs:
	* MMC.cs:
	* DiscImageChef.Devices.csproj:
	* SecureDigital.cs: Add MMC/SecureDigital device support. Not
	yet used because of a bad implementation of SEND_CSD and
	SEND_CID commands (TODO).

2016-10-17  Natalia Portillo  <claunia@claunia.com>

	* Variables.cs:
	* Constructor.cs: Added PCMCIA support.

2016-10-12  Natalia Portillo  <claunia@claunia.com>

	* SPC.cs: Added REQUEST SENSE command.

	* SSC.cs: Added SPACE command.

	* Enums.cs: Added enumeration for SPACE command codes.

2016-10-10  Natalia Portillo  <claunia@claunia.com>

	* SPC.cs: Corrected buffer size for MODE SENSE (6)
